Bib andex fixes

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -114,7 +114,7 @@
   title={Active learning literature survey},
   author={Settles, Burr},
   year={2009},
-  institution={University of Wisconsin-Madison Department of Computer Sciences}
+  institution={Univ.~of Wisconsin-Madison, Dep.~of Computer Sciences}
 }
 
 @inproceedings{guyon2011results,
