--- a/rasha19iros.tex
+++ b/rasha19iros.tex
@@ -36,7 +36,7 @@
 %%\usepackage{flushend}
 
 %% Style hacks to save space
-\setlength{\textfloatsep}{1.95em}
+%\setlength{\textfloatsep}{1.95em}
 %\setlength{\dbltextfloatsep}{1.1em}
 %\usepackage[font=small]{caption}
 
@@ -99,7 +99,7 @@ approach reduces the required human labeling  effort.
 \section{INTRODUCTION}
 \label{sec:intro}
 
-The ability to semantically interpret the scene in front of a robot is key for
+The ability to  interpret the scene in front of a robot is key for
 intelligent behavior in several applications. For example, precision farming
 robots need to know which type of plant they perceive or autonomous cars need to
 know  which object in their surroundings is a car, a pedestrian, or a
