small fixes to bib

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -120,7 +120,7 @@
 @inproceedings{guyon2011results,
   title={Results of the active learning challenge},
   author={Guyon, Isabelle and Cawley, Gavin and Dror, Gideon and Lemaire, Vincent},
-  booktitle={Active Learning and Experimental Design workshop In conjunction with AISTATS 2010},
+  booktitle={Proc.~of the AISTATS Active Learning and Experimental Design Workshop},
   pages={19--45},
   year={2011}
 }
@@ -128,7 +128,7 @@
 @inproceedings{holub2008entropy,
   title={Entropy-based active learning for object recognition},
   author={Holub, Alex and Perona, Pietro and Burl, Michael C.},
-  booktitle={2008 IEEE Computer Society Conf.~on Computer Vision and Pattern Recognition Workshops},
+  booktitle={IEEE Computer Society Conf.~on Computer Vision and Pattern Recognition Workshops},
   pages={1--8},
   year={2008},
 }
@@ -136,7 +136,7 @@
 @inproceedings{zhou2017fine,
   title={Fine-tuning convolutional neural networks for biomedical image analysis: actively and incrementally},
   author={Zhou, Zongwei and Shin, Jae and Zhang, Lei and Gurudu, Suryakanth and Gotway, Michael and Liang, Jianming},
-  booktitle={Proc.~of the IEEE Conf.~on computer vision and pattern recognition},
+  booktitle=cvpr,
   pages={7340--7351},
   year={2017}
 }
@@ -164,7 +164,6 @@
   booktitle={Proc.~of thhe Intl.~Conf.~on Machine Learning},
   pages={1183--1192},
   year={2017},
-  organization={JMLR. org}
 }
 
 
@@ -278,7 +277,7 @@ url = {http://www.ipb.uni-bonn.de/wp-content/papercite-data/pdf/lottes16jfr.pdf}
 @article{badrinarayanan2017segnet,
   title={Segnet: A deep convolutional encoder-decoder architecture for image segmentation},
   author={Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
-  journal={IEEE transactions on pattern analysis and machine intelligence},
+  journal=tpami,
   volume={39},
   number={12},
   pages={2481--2495},
@@ -315,7 +314,7 @@ url = {http://www.ipb.uni-bonn.de/wp-content/papercite-data/pdf/lottes16jfr.pdf}
                Blackmore, Simon and
                Grieve, Bruce},
   title     = {Agricultural Robotics: The Future of Robotic Agriculture},
-  journal   = {CoRR},
+  journal   = {arXiv preprint},
   volume    = {abs/1806.06762},
   year      = {2018},
   url       = {http://arxiv.org/abs/1806.06762},
