small fixes to bib

--- a/rasha19iros.tex
+++ b/rasha19iros.tex
@@ -33,7 +33,7 @@
 \captionsetup{subrefformat=parens}
 
 %% Aligns the last page but causes errors on some machines (such as OSX), so don't use it for now.
-%%\usepackage{flushend}
+\usepackage{flushend}
 
 %% Style hacks to save space
 %\setlength{\textfloatsep}{1.95em}
