small fixes to bib

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -185,7 +185,7 @@
 
 @inproceedings{beluch2018power,
   title={The power of ensembles for active learning in image classification},
-  author={Beluch, William H and Genewein, Tim and N{\"u}rnberger, Andreas and K{\"o}hler, Jan M},
+  author={Beluch, William H. and Genewein, Tim and N{\"u}rnberger, Andreas and K{\"o}hler, Jan M.},
   booktitle={Proc.~of the IEEE Conf.~on Computer Vision and Pattern Recognition},
   pages={9368--9377},
   year={2018}
