--- a/rasha19iros.tex
+++ b/rasha19iros.tex
@@ -243,7 +243,7 @@ As input to our network we only use the RGB channels.
 
 \section{Effective Sample Selection}
 
-We experimented with different approaches to select samples. The baseline is randomly selecting samples for annotation in batches of 10. The other approaches include selecting samples driven by the uncertainty of the network, the training loss, and the weights gradients of the network.   
+We experimented with different approaches to select samples. The baseline is randomly selecting samples for annotation in batches of 10. The other approaches include selecting samples driven by the uncertainty of the network, the training loss, and the weight gradients of the network.   
 
 
 \subsection{Uncertainty}
@@ -609,7 +609,7 @@ approach on two agricultural  datasets for weed detection. The datasets
 reveal different characteristics from the dataset on which the network was pretrained.
 Our results show the effectiveness of our method as it produces higher semantic segmentation
 accuracies with a smaller number of training samples, compared to random sampling as
-well as uncertainty-based approaches for selecting samples for annotation. As as result
+well as uncertainty-based approaches for selecting samples for annotation. As a result
 of that, the effort in human annotation is considerably reduced without compromising
 performance.
  
