--- a/rasha19iros.tex
+++ b/rasha19iros.tex
@@ -517,8 +517,8 @@ A more detailed breakdown of the methods performance is shown in tables \ref{tab
     \end{table}
    
    
-  To analyze the samples picked by the gradient based approach, we plot the t-distributed Stochastic Neighbor Embedding (t-SNE) of the gradients in Figure \ref{fig:tsne}. Each circle in the plot denotes the 2-D embedding of the gradients of a single image before picking the first 10 samples. Red circles in the figure denote images selected by the Gradient Norm method. Points in the bottom left have a large norm of gradients, while the point in the upper left has the lowest norm of the gradient. Given the log-spacing of the selected samples, it can be seen that it more densely selects images that the network finds difficult, and the other selected points are more spread out. For future work, we plan to investigate how this embedding can be further exploited to pick the best samples.
-   
+  To analyze the samples picked by the gradient based approach, we plot the t-distributed Stochastic Neighbor Embedding (t-SNE) of the gradients in Figure \ref{fig:tsne}. Each circle in the plot denotes the 2-D embedding of the gradients of a single image before picking the first 10 samples. Red circles in the figure denote images selected by the Gradient Norm method. Points in the bottom left have a large norm of gradients, while the point in the upper left has the lowest norm of the gradient. Given the log-spacing of the selected samples, it can be seen that it more densely selects images that the network finds difficult, and the other selected points are more spread out. Figure \ref{fig:tsne_proj} shows the points selected with the gradient projection method. Again we can see that most of the points selected are those with a higher gradient of the norm and the others are spread out across the embedding. For future work, we plan to investigate how this embedding can be further exploited to pick the best samples. 
+  
        \begin{figure}
 %    \vspace{1em} 
     \centering
@@ -527,6 +527,18 @@ A more detailed breakdown of the methods performance is shown in tables \ref{tab
 		\label{fig:tsne}    		
  %   \vspace{1em}
    \end{figure}
+   
+   
+   
+          \begin{figure}
+%    \vspace{1em} 
+    \centering
+    \includegraphics[width=\linewidth]{pics/tsne_grad_projection.pdf}
+   		\caption{t-SNE of the images gradients on the Stuttgart dataset. The first 10 samples selected by the gradient projection method are shown in red.}
+		\label{fig:tsne_proj}    		
+ %   \vspace{1em}
+   \end{figure}
+
 
 
 
