--- a/rasha19iros.tex
+++ b/rasha19iros.tex
@@ -490,7 +490,7 @@ A more detailed breakdown of the methods performance is shown in tables \ref{tab
            \cmidrule{2-5} 
                & Weed & Crop & Weed & Crop \\ 
             \midrule 
-    		  Random & \textit{0.8723} & 0.5740 & 0.6587 & 0.6474  \\ \addlinespace
+    		  Random & \textit{0.8723} & 0.5740 & 0.6587 & \textit{0.6474}  \\ \addlinespace
     		  Uncertainty & \textbf{0.9476} & \textit{0.4586} & \textit{0.4919} & \textbf{0.8854}  \\ \addlinespace
     		  Loss & 0.9005 & 0.6898 & 0.7811 & 0.7351  \\ \addlinespace
     		  Gradient Norm & 0.9090 & \textbf{0.7390} & 0.7970 & 0.7536  \\ \addlinespace
