better looking tables

--- a/rasha19iros.tex
+++ b/rasha19iros.tex
@@ -12,6 +12,8 @@
 \usepackage[noend]{algpseudocode}
 \usepackage[activate=alltext]{microtype}
 \usepackage{rotating}
+\usepackage{makecell}
+
 
 
 \usepackage{subcaption} % enables use multiple figures in a figure
@@ -525,18 +527,12 @@ A more detailed breakdown of the methods performance is shown in tables \ref{tab
    \end{figure}
 
 
-
-
-
-
-
-
     \begin{table}
         \centering
         \caption{Object-wise Performance on the Stuttgart dataset. Each row shows the performance after selecting 10 samples with the different methods and refining the network.}
         \begin{tabular}{@{}cccccc@{}} 
             \toprule
-             \begin{sideways}Samples No.\end{sideways} & \begin{sideways}Random\end{sideways} & \begin{sideways}Uncertainty\end{sideways} & \begin{sideways}Loss\end{sideways} & \begin{sideways}Gradient Norm.\end{sideways} & \begin{sideways}Gradient Proj.\end{sideways} \\ 
+            \makecell{Samples \\ No.} & \makecell{Random} & \makecell{Uncertainty} & \makecell{Loss} & \makecell{Gradient \\ Norm} & \makecell{Gradient \\ Proj.} \\ 
             \midrule 
     		  10  & 0.6920 & 0.6437 & 0.7882 & 0.8040 & 0.8196 \\ \addlinespace
     		  20  & 0.7402 & 0.8408 & 0.7769 & 0.8350 & 0.8404 \\ \addlinespace
@@ -553,18 +549,15 @@ A more detailed breakdown of the methods performance is shown in tables \ref{tab
         \label{tab:stuttgart}
     %       \vspace{10em}
     \end{table}
-    
-    
-
-    
-    
+   
+       
     
         \begin{table}
         \centering
         \caption{Object-wise Performance on the Zurich dataset. Each row shows the performance after selecting 10 samples with the different methods and refining the network.}
         \begin{tabular}{@{}cccccc@{}} 
             \toprule
-             \begin{sideways}Samples No.\end{sideways} & \begin{sideways}Random\end{sideways} & \begin{sideways}Uncertainty\end{sideways} & \begin{sideways}Loss\end{sideways} & \begin{sideways}Gradient Norm.\end{sideways} & \begin{sideways}Gradient Proj.\end{sideways}\\ 
+            \makecell{Samples \\ No.} & \makecell{Random} & \makecell{Uncertainty} & \makecell{Loss} & \makecell{Gradient \\ Norm} & \makecell{Gradient \\ Proj.} \\ 
             \midrule 
     		  10  & 0.7552 & 0.6943 & 0.7697 & 0.8354 & 0.8025 \\ \addlinespace
     		  20  & 0.7971 & 0.8281 & 0.8189 & 0.8768 & 0.8170 \\ \addlinespace
